--- a/templates/videojuegos.html
+++ b/templates/videojuegos.html
@@ -17,34 +17,49 @@
     <main class="juegos">
         <section class="arriba">
             <div class="juego">
-                <img src="../static/images/mario-fondo-negro.png" alt="Super Mario Bros">
+                <a href="https://www.nintendo.com/es-es/Juegos/Portal-de-Nintendo/Portal-para-Super-Mario/Portal-para-Super-Mario-627604.html" target="_blank">
+                    <img src="../static/images/mario-fondo-negro.png" alt="Super Mario Bros">
+                </a>
                 <p>Super Mario Bros</p>
+                
             </div>
             <div class="juego">
-                <img src="../static/images/finalFantasy.jpg" alt="Final Fantasy">
+                <a href="https://finalfantasy.com/" target="_blank">
+                    <img src="../static/images/finalFantasy.jpg" alt="Final Fantasy">
+                </a>
                 <p>Final Fantasy</p>
             </div>
             <div class="juego">
-                <img src="../static/images/donkeyKong-fondo-negro.jpg" alt="Donkey Kong">
+                <a href="https://www.nintendo.com/es-es/Juegos/Juegos-de-Nintendo-Switch/Donkey-Kong-Country-Returns-HD-2590475.html" target="_blank">
+                    <img src="../static/images/donkeyKong-fondo-negro.jpg" alt="Donkey Kong">
+                </a>
                 <p>Donkey Kong</p>
             </div>
         </section>
 
         <section class="abajo">
             <div class="juego">
-                <img src="../static/images/pacman2.png" alt="Pac-Man">
+                <a href="https://pacman.com/" target="_blank">
+                    <img src="../static/images/pacman2.png" alt="Pac-Man">
+                </a>
                 <p>Pac-Man</p>
             </div>
             <div class="juego">
-                <img src="../static/images/rockman.jpg" alt="Rockman">
+                <a href="https://megaman.capcom.com/" target="_blank">
+                    <img src="../static/images/rockman.jpg" alt="Rockman">
+                </a>
                 <p>Rockman</p>
             </div>
             <div class="juego">
-                <img src="../static/images/sonic.jpg" alt="Sonic">
+                <a href="https://www.sega.com/es/sonic-the-hedgehog" target="_blank">
+                    <img src="../static/images/sonic.jpg" alt="Sonic">
+                </a>
                 <p>Sonic</p>
             </div>
             <div class="juego">
-                <img src="../static/images/zelda.jpg" alt="The Legend of Zelda">
+                <a href="https://www.zelda.com/" target="_blank">
+                    <img src="../static/images/zelda.jpg" alt="The Legend of Zelda">
+                </a>
                 <p>The Legend of Zelda</p>
             </div>
         </section>
